--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "lib:publish": "ng build angular-scroll-animations --prod && cd dist/angular-scroll-animations && npm pack && npm publish"
   },
   "private": true,
   "dependencies": {
