--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lib:publish": "ng build angular-scroll-animations --prod && cd dist/angular-scroll-animations && npm pack && npm publish"
+    "lib:publish": "ng build --project angular-scroll-animations --prod && cd dist/angular-scroll-animations && npm pack && npm publish"
   },
   "private": true,
   "dependencies": {
