--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "~11.0.7",
     "@angular/platform-browser-dynamic": "~11.0.7",
     "@angular/router": "~11.0.7",
+    "@scarf/scarf": "^1.1.0",
     "rxjs": "~6.6.0",
-    "simplecore-ui": "0.0.6",
+    "simplecore-ui": "0.0.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
