--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "build:lib": "ng build --prod --project angular-scroll-animations",
     "lib:publish": "ng build --project angular-scroll-animations --prod && cd dist/angular-scroll-animations && npm pack && npm publish"
   },
   "private": true,
